versions/11.4.4/stencil/components/date-picker/readme.md
# limel-date-picker



<!-- Auto Generated Below -->


## Properties

| Property   | Attribute  | Description                                                                                          | Type                                                                         |
| ---------- | ---------- | ---------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
| `disabled` | `disabled` | Disables the date picker when `true`. Defaults to `false`.                                           | `boolean`                                                                    |
| `format`   | `format`   | Format to display the selected date in                                                               | `string`                                                                     |
| `invalid`  | `invalid`  | Set to `true` to indicate that the current value of the date picker is invalid. Defaults to `false`. | `boolean`                                                                    |
| `label`    | `label`    | Text to display next to the date picker                                                              | `string`                                                                     |
| `required` | `required` | Set to `true` to indicate that the field is required. Defaults to `false`.                           | `boolean`                                                                    |
| `type`     | `type`     | Type of date picker. Defaults to `datetime`                                                          | `"date" \| "datetime" \| "month" \| "quarter" \| "time" \| "week" \| "year"` |
| `value`    | --         | The value of the field.                                                                              | `Date`                                                                       |


## Events

| Event    | Detail | Description                                    |
| -------- | ------ | ---------------------------------------------- |
| `change` |        | Emitted when the date picker value is changed. |


----------------------------------------------

*Built with [StencilJS](https://stenciljs.com/)*
